[iOS] Make the "Learn More" button have a transparent background.

Bug: 747390

Change-Id: Iedb631ac872fcf211a196abf29bfb076ac1a5335
Reviewed-on: https://chromium-review.googlesource.com/692377
Reviewed-by: Rohit Rao (ping after 24h) <rohitrao@chromium.org>
Commit-Queue: Jean-François Geyelin <jif@chromium.org>
Cr-Commit-Position: refs/heads/master@{#511071}
Former-commit-id: 565c8d96844cd257bdd7c2d899bdb6257bb904db